viewer: manage lifespan of View* properly

otherwise part of the viewing object tree outlives QThread(StorageData)
and explodes on exit

BUG: 491710